kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dreamco-control-tower
spec:
  selector:
    app: dreamco-control-tower
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: ClusterIP
